--- a/themes/theme1/source/css/dropdownMenu.css
+++ b/themes/theme1/source/css/dropdownMenu.css
@@ -62,7 +62,7 @@ This stylesheet and the associated (x)html may be modified in any way to fit you
     top: 100%;
     width: 200%;
     z-index: 500;
-    background-color: #fff;
+    background-color:transparent;
     -webkit-perspective: 400px;
     -moz-perspective: 400px;
     -ms-perspective: 400px;
@@ -70,7 +70,7 @@ This stylesheet and the associated (x)html may be modified in any way to fit you
     perspective: 400px;
 }
 .submenu li {
-
+    line-height:150%;
     opacity: 0;
     -webkit-transform: rotateY(90deg);
     -moz-transform: rotateY(90deg);
